--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
                         <p>Full stack web developer responsible for end-to-end web app development and creative cloud engineering.</p>
                     </div>
                 </div>
+                 <div class="card">
+                    <div class="box">
+                        <i class="fa fa-database"></i>
+                        <a href="https://https://en.wikipedia.org/wiki/SQL">
+                            <div class="text">SQL</div>
+                        </a>
+                        <p>It is particularly useful in handling structured data, i.e., data incorporating relations among entities and variables.</p>
+                    </div>
+                </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
