--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="column left">
                     <div class="text">My technical skills .</div>
                     <p>Accomplished and highly-organized undergraduate student ,passionate in exploring new skills and completing willing courses .
-                        I've finished full stack web development course which includes frontend/backend,UX/UI designing ,with HTML,CSS,JAVA SCRIPT,BOOSTRAP,GIT,MYSQL,Angular,React js .
+                        I've finished full stack web development course which includes frontend/backend,UX/UI designing ,with HTML,CSS,JAVA SCRIPT,GIT Hub,MYSQL,Power Bi .
                     </p>
                     <a href="#contact">Leave a message to learn more about me </a>
                 </div>
@@ -115,35 +115,25 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>PHP</span>
+                            <span>PowerBi</span>
                             <span>75%</span>
                         </div>
-                        <div class="line php"></div>
+                        <div class="line PowerBi"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>MySQL</span>
-                            <span>60%</span>
+                            <span>75%</span>
                         </div>
                         <div class="line mysql"></div>
                     </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>AZURE</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line reactjs"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </section>
     <section class="contact" id="contact">
         <div class="max-width">
             <h2 class="title">Contact me</h2>
             <div class="contact-content">
                 <div class="column left">
-                    <div class="text">Interested in hiring Aravind ?</div>
+                    <div class="text">Interested in hiring me ?</div>
                     <p>Have any query or want to work together ?
                  </p>
                     <div class="icons">
@@ -151,14 +141,14 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Aravind</div>
+                                <div class="sub-title">B Aravind</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">bangulure,Karnataka, India</div>
+                                <div class="sub-title">Banglore,Karnataka, India</div>
                             </div>
                         </div>
                         <div class="row">
