--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="column right">
                     <div class="text">I am B Aravind and I'm a<span class="typing-2"></span></div>
                     <p> I have completed my Bachelor of Technology in ECE at Gitam University (2020-2024). I'm reliable and able to complete tasks on time in both individual and team settings. Through my academic and extracurricular projects, I've developed my communication, leadership and interpersonal skills that will serve this role and company well. I learnt programming, ,Power BI  tools, and basic SQL techniques. I have gained very good knowledge about basics of Python,HTML, CSS,  and JavaScript like languages and completed project on Iot and machinelearning.I have successfully completed my internship in the core java .And also I am enthusiastic to learn and work in Web development projects. </p>
-                    <a href="Resume.pdf">Download CV</a>  
+                    <a href="Aravind B.pdf">Download CV</a>  
                 </div>
             </div>
         </div>
@@ -114,6 +114,8 @@
                         <div class="line js"></div>
                     </div>
                     <div class="bars">
+                        <div class="info">
+                            <div class="bars">
                         <div class="info">
                             <span>PowerBi</span>
                             <span>75%</span>
